--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
-  banner: "Your image url"
+  heading: "안녕하십니까"
+  subheading: "한수요"
+  banner: ../assets/images/banners/hero.jpg
