--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "안녕하십니까"
+  heading: "황수현 블로그"
   subheading: "한수요"
-  banner: ../assets/images/banners/hero.jpg
+  banner: ../assets/images/banners/power.png
