--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 황수현
+title: 빵뚜
 email: tngus015@naver.com
 author: ppangddu
 
