--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
   heading: "ppangddu 블로그"
   subheading: "한수요"
-  banner: ../assets/images/banners/maple2.png
+  banner: ../assets/images/maple2.png
