--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
   heading: "빵 뚜 blog"
   subheading: "한수요"
-  banner: ../assets/images/banners/power
+  banner: ../assets/images/banners/"maple3.png"
